--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -205,4 +205,7 @@
     <string name="few_tags">%1$s étiquettes</string>
     <string name="many_tags">%1$s étiquettes</string>
     <string name="other_tags">%1$s étiquettes</string>
+    <string name="failed_to_fetch_full_article_missing_body">Il n\'y a rien à récupérer</string>
+    <string name="failed_to_fetch_full_article_missing_link">Le lien vers l\'article est manquant dans le flux</string>
+    <string name="failed_to_fetch_full_article_not_html">Le lien n\'est pas un document HTML</string>
 </resources>
