--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -205,4 +205,7 @@
     <string name="many_tags">%1$sタグ</string>
     <string name="other_tags">%1$sタグ</string>
     <string name="mark_as_read_on_scroll">スクロールして既読にする</string>
+    <string name="failed_to_fetch_full_article_missing_body">取得するものは見つかりませんでした</string>
+    <string name="failed_to_fetch_full_article_missing_link">フィードに記事へのリンクがありません</string>
+    <string name="failed_to_fetch_full_article_not_html">リンクはHTMLドキュメントではありません</string>
 </resources>
