--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -205,4 +205,7 @@
     <string name="saved_articles">Artigos salvos</string>
     <string name="save_article">Salvar artigo</string>
     <string name="unsave_article">Deixar de salvar artigo</string>
+    <string name="failed_to_fetch_full_article_missing_body">Nada foi encontrado para baixar</string>
+    <string name="failed_to_fetch_full_article_missing_link">O feed está sem o link para o artigo</string>
+    <string name="failed_to_fetch_full_article_not_html">O link não é um documento HTML</string>
 </resources>
