--- a/app/src/main/res/values-sv/strings.xml
+++ b/app/src/main/res/values-sv/strings.xml
@@ -205,4 +205,7 @@
     <string name="one_tags">%1$s tagg</string>
     <string name="mark_as_read_on_scroll">Markera som läst vid skrollning</string>
     <string name="saved_article">Sparad artikel</string>
+    <string name="failed_to_fetch_full_article_missing_body">Hittade ingenting att hämta</string>
+    <string name="failed_to_fetch_full_article_missing_link">Flödet saknar länk till artikeln</string>
+    <string name="failed_to_fetch_full_article_not_html">Länk är inte ett HTML dokument</string>
 </resources>
