Updated Swedish translation using Weblate
Currently translated at 100.0% (208 of 208 strings)

Co-authored-by: Jonas Kalderstam <jonas@cowboyprogrammer.org>
Translate-URL: https://hosted.weblate.org/projects/feeder/android-strings/sv/
Translation: Feeder/Android strings

--- a/app/src/main/res/values-sv/strings.xml
+++ b/app/src/main/res/values-sv/strings.xml
@@ -207,5 +207,5 @@
     <string name="saved_article">Sparad artikel</string>
     <string name="failed_to_fetch_full_article_missing_body">Hittade ingenting att hämta</string>
     <string name="failed_to_fetch_full_article_missing_link">Flödet saknar länk till artikeln</string>
-    <string name="failed_to_fetch_full_article_not_html">Länk är inte ett HTML dokument</string>
+    <string name="failed_to_fetch_full_article_not_html">Länken är inte ett HTML-dokument</string>
 </resources>
