Updated Indonesian translation using Weblate
Currently translated at 100.0% (208 of 208 strings)

Co-authored-by: Reza Almanda <rezaalmanda27@gmail.com>
Translate-URL: https://hosted.weblate.org/projects/feeder/android-strings/id/
Translation: Feeder/Android strings

--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -196,4 +196,16 @@
     <string name="two_tags">%1$s tag</string>
     <string name="many_tags">%1$s tag</string>
     <string name="other_tags">%1$s tag</string>
+    <string name="failed_to_fetch_full_article_not_html">Tautan bukan dokumen HTML</string>
+    <string name="no_feeds">Tidak ada umpan</string>
+    <string name="zero_feeds">%1$s umpan</string>
+    <string name="one_feed">%1$s umpan</string>
+    <string name="two_feeds">%1$s umpan</string>
+    <string name="few_feeds">%1$s umpan</string>
+    <string name="many_feeds">%1$s umpan</string>
+    <string name="other_feeds">%1$s umpan</string>
+    <string name="failed_to_fetch_full_article_missing_body">Tidak ada apa pun untuk diambil</string>
+    <string name="failed_to_fetch_full_article_missing_link">Tautan ke artikel hilang</string>
+    <string name="saved_articles">Artikel yang disimpan</string>
+    <string name="saved_article">Artikel yang disimpan</string>
 </resources>
