--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -223,4 +223,8 @@
   <string name="failed_to_fetch_full_article_missing_link">Feed is missing link to article</string>
   <string name="failed_to_fetch_full_article_not_html">Link is not an HTML document</string>
   <string name="max_lines">Max lines</string>
+    <string name="filter">Filter</string>
+  <string name="recently_read">Recently read</string>
+  <string name="read">Read</string>
+  <string name="saved">Saved</string>
 </resources>
