--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -114,7 +114,7 @@
     <string name="showing_all_articles">Mostrar todos los artículos</string>
     <string name="showing_only_unread_articles">Mostrar solo artículos no leídos</string>
     <string name="already_read">Ya leídos</string>
-    <string name="unread">No leídos</string>
+    <string name="unread_adjective">No leídos</string>
     <string name="go_to_feed">Ir a %1$s</string>
     <string name="open_menu">Abrir menú</string>
     <string name="go_back">Ir hacía atrás</string>
