--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -110,7 +110,7 @@
     <string name="dark_theme_preference_black">Preto</string>
     <string name="dark_theme_preference_dark">Escuro</string>
     <string name="go_to_feed">Ir para %1$s</string>
-    <string name="unread">Não lidos</string>
+    <string name="unread_adjective">Não lidos</string>
     <string name="showing_all_articles">Mostrar todos os artigos</string>
     <string name="zero_unread_articles">%1$s artigos não lidos</string>
     <string name="one_unread_article">%1$s artigo não lido</string>
