--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -111,7 +111,7 @@
     <string name="showing_all_articles">Wyświetlanie wszystkich artykułów</string>
     <string name="showing_only_unread_articles">Wyświetlanie tylko nieprzeczytanych artykułów</string>
     <string name="already_read">Już przeczytane</string>
-    <string name="unread">Nieprzeczytane</string>
+    <string name="unread_adjective">Nieprzeczytane</string>
     <string name="go_to_feed">Przejdź do %1$s</string>
     <string name="open_menu">Otwórz menu</string>
     <string name="go_back">Wstecz</string>
