--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -111,7 +111,7 @@
     <string name="showing_all_articles">Tüm makaleler gösteriliyor</string>
     <string name="showing_only_unread_articles">Yalnızca okunmayan makaleler gösteriliyor</string>
     <string name="already_read">Okundu</string>
-    <string name="unread">Okunmadı</string>
+    <string name="unread_adjective">Okunmadı</string>
     <string name="go_to_feed">%1$s\'e git</string>
     <string name="open_menu">Menüyü aç</string>
     <string name="go_back">Geri git</string>
