--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -140,7 +140,7 @@
   <string name="go_back">Go back</string>
   <string name="open_menu">Open menu</string>
   <string name="go_to_feed">Go to %1$s</string>
-  <string name="unread">Unread</string>
+  <string name="unread_adjective">Unread</string>
   <string name="already_read">Already read</string>
   <string name="showing_only_unread_articles">Showing only unread articles</string>
   <string name="showing_all_articles">Showing all articles</string>
@@ -205,7 +205,7 @@
   <string name="save_article">Save article</string>
   <string name="unsave_article">Stop saving article</string>
   <string name="mark_as_read_on_scroll">Mark as read on scroll</string>
-    <string name="no_feeds">No feeds</string>
+  <string name="no_feeds">No feeds</string>
   <string name="zero_feeds">%1$s feeds</string>
   <string name="one_feed">%1$s feed</string>
   <string name="two_feeds">%1$s feeds</string>
@@ -223,8 +223,8 @@
   <string name="failed_to_fetch_full_article_missing_link">Feed is missing link to article</string>
   <string name="failed_to_fetch_full_article_not_html">Link is not an HTML document</string>
   <string name="max_lines">Max lines</string>
-    <string name="filter">Filter</string>
-  <string name="recently_read">Recently read</string>
-  <string name="read">Read</string>
-  <string name="saved">Saved</string>
+  <string name="filter_noun">Filter</string>
+  <string name="recently_read_adjective">Recently read</string>
+  <string name="read_adjective">Read</string>
+  <string name="saved_adjective">Saved</string>
 </resources>
